<resources>
    <string name="app_name">Tienbeerv2.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="favoritos">Favoritos</string>
    <string name="dev_op">DEV OP</string>
    <string name="a_adir_cervezas">Añadir Cervezas</string>
    <string name="favoritosfragment">FavoritosFragment</string>
    <string name="anadirfragment">AnadirFragment</string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="nombre">Nombre</string>
    <string name="name">Name</string>
    <string name="precio">Precio</string>
    <string name="tipo">Tipo</string>
    <string name="de_alcohol">% de alcohol</string>
    <string name="subir">SUBIR</string>
    <string name="_3_y_3">3 y 3</string>
</resources>