<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tienbeerv20.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_filtro"
            app:destination="@id/nav_filtro"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.tienbeerv20.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.tienbeerv20.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_favoritos"
        android:name="com.example.tienbeerv20.ui.favoritos.FavoritosFragment"
        android:label="Favorites"
        tools:layout="@layout/fragment_favoritos" />

    <fragment
        android:id="@+id/nav_anadir"
        android:name="com.example.tienbeerv20.ui.anadir.AnadirFragment"
        android:label=" "
        tools:layout="@layout/fragment_anadir" />

    <fragment
        android:id="@+id/nav_filtro"
        android:name="com.example.tienbeerv20.ui.filtros.Filtros"
        android:label="Seleccion de filtros"
        tools:layout="@layout/filtros_fragment" >
        <action
            android:id="@+id/action_nav_filtro_to_seleccionCervezas"
            app:destination="@id/seleccionCervezas" />
    </fragment>
    <fragment
        android:id="@+id/seleccionCervezas"
        android:name="com.example.tienbeerv20.ui.SeleccionCervezas.SeleccionCervezas"
        android:label="fragment_seleccion_cervezas"
        tools:layout="@layout/fragment_seleccion_cervezas" >
        <action
            android:id="@+id/action_seleccionCervezas_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>