<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.filtros.Filtros">

    <Button
        android:id="@+id/btnFiltrar"
        android:layout_width="199dp"
        android:layout_height="57dp"
        android:layout_marginBottom="32dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="87dp"
        android:layout_height="22dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:text="@string/nacionalidad"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/FIspinnerNacionalidad"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toEndOf="@+id/cbNac"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="87dp"
        android:layout_height="22dp"
        android:layout_marginTop="56dp"
        android:text="@string/tipo"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/FIspinnerTipo"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toEndOf="@+id/cbTipo"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginTop="44dp"
        android:text="Rango de precio"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/FIspinnerPrecio"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toEndOf="@+id/cbPrecio"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="87dp"
        android:layout_height="22dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:text="@string/de_alcohol"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/FIspinnerNacionalidad"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toEndOf="@+id/cbNac"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Spinner
        android:id="@+id/FIspinnerNacionalidad"
        android:layout_width="209dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/FIspinnerPrecio"
        android:layout_width="209dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FIspinnerTipo" />

    <Spinner
        android:id="@+id/FIspinnerAlcohol"
        android:layout_width="209dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FIspinnerPrecio" />

    <Spinner
        android:id="@+id/FIspinnerTipo"
        android:layout_width="209dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FIspinnerNacionalidad" />

    <CheckBox
        android:id="@+id/cbNac"
        android:layout_width="32dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbTipo"
        android:layout_width="34dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbNac" />

    <CheckBox
        android:id="@+id/cbPrecio"
        android:layout_width="34dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbTipo" />

    <CheckBox
        android:id="@+id/cbAlcohol"
        android:layout_width="34dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbPrecio" />

    <Switch
        android:id="@+id/switchRepetidas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Deseas repetir cervezas?     "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FIspinnerAlcohol" />

</androidx.constraintlayout.widget.ConstraintLayout>